[gd_scene load_steps=2 format=3 uid="uid://wn34mhh2xx7n"]

[ext_resource type="Script" path="res://SafeUI.gd" id="1_safe_ui"]

[node name="SafeUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_safe_ui")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.033
anchor_right = 0.98
anchor_bottom = 0.1
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "SECURE ACCESS TERMINAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.117
anchor_right = 0.98
anchor_bottom = 0.183
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Enter 4-digit code:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DisplayLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.2
anchor_right = 0.98
anchor_bottom = 0.283
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "_ _ _ _"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberPad" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.33
anchor_right = 0.8
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Button1" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "1"

[node name="Button2" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "2"

[node name="Button3" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "3"

[node name="Button4" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "4"

[node name="Button5" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "5"

[node name="Button6" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "6"

[node name="Button7" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "7"

[node name="Button8" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "8"

[node name="Button9" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "9"

[node name="ButtonEmpty" type="Control" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button0" type="Button" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "0"

[node name="ButtonEmpty2" type="Control" parent="Panel/NumberPad"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionButtons" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.8
anchor_right = 0.96
anchor_bottom = 0.93
grow_horizontal = 2
grow_vertical = 2

[node name="ClearButton" type="Button" parent="Panel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "CLEAR"

[node name="EnterButton" type="Button" parent="Panel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "ENTER"

[node name="CloseButton" type="Button" parent="Panel/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "CLOSE"
